fix(cors): allow all origins to unblock Flutter web on Render
- Removed env-var-based origin whitelist that blocked browser requests
- Set allowedOriginPatterns to wildcard (*) for full cross-origin support
- Set allowCredentials to false (correct for JWT Bearer token auth —
  credentials mode only applies to cookies, not Authorization headers)
- Added PATCH and OPTIONS to allowed methods
- Added maxAge 3600 to cache preflight responses
This fixes the 401/CORS error when Flutter web calls the Render backend.